--- a/chat_app-springboot-main/src/main/resources/application.properties
+++ b/chat_app-springboot-main/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=pollingSytemOnline
 spring.main.allow-bean-definition-overriding=true
-spring.datasource.url=jdbc:mysql://localhost:3306/chatslogin
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/chatslogin}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:root}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-circular-references =true
