change jdk to 17 because it was causing issues while deploying

--- a/chat_app-springboot-main/Dockerfile
+++ b/chat_app-springboot-main/Dockerfile
@@ -1,13 +1,10 @@
-FROM openjdk:22-jdk AS build
+FROM maven:3.8.5-openjdk-17 AS build
 WORKDIR /app
-
-# Install Maven
-RUN apt-get update && apt-get install -y maven
 
 COPY . .
 RUN mvn clean package -DskipTests
 
-FROM openjdk:22-jdk-slim
+FROM openjdk:17.0.1-jdk-slim
 COPY --from=build /app/target/chat-app-0.0.1-SNAPSHOT demo.jar
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","demo.jar"]
