--- a/chat_app-springboot-main/src/main/resources/application.properties
+++ b/chat_app-springboot-main/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.application.name=pollingSytemOnline
+spring.application.name=pollingSystemOnline
 spring.main.allow-bean-definition-overriding=true
-spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/chatslogin}
-spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:root}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.main.allow-circular-references =true
+# Database Configuration
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/postgres}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:postgres}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.default_schema=chatslogin
+# Hibernate Settings
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
