--- a/chat_app-springboot-main/src/main/resources/application.properties
+++ b/chat_app-springboot-main/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.properties.hibernate.default_schema=chatslogin
 # Hibernate Settings
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
